--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,43 @@
+html {
+  background-color: #0b0b0b;
+}
+
 body {
   font-family: "Libre Franklin", "Roboto", sans-serif;
   font-weight: 300;
+  font-size: 1.3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: aliceblue;
+}
+
+.form {
+  margin: 0 auto;
+  padding: 5em;
+  border: 0.2rem solid aliceblue;
+  background-color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2rem;
+  color: #0b0b0b;
+}
+
+.form label {
+  text-align: left;
+  width: 100%;
+}
+
+.form input {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  width: 100%;
+  box-sizing: border-box;
+  min-width: 300px;
+  border: none;
+  box-shadow: inset 0 0 0.2rem #8a8a8a;
+  border-radius: 0.4rem;
+  font-family: "Libre Franklin", "Roboto", sans-serif;
 }
