--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,22 @@ body {
 .form label {
   text-align: left;
   width: 100%;
+  margin-bottom: 0.2rem;
 }
 
 .form input {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  width: 100%;
+  box-sizing: border-box;
+  min-width: 300px;
+  border: none;
+  box-shadow: inset 0 0 0.2rem #8a8a8a;
+  border-radius: 0.4rem;
+  font-family: "Libre Franklin", "Roboto", sans-serif;
+}
+
+.form select{
   margin-bottom: 1rem;
   padding: 0.5rem;
   width: 100%;
