--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #0b0b0b;
+  background-image: url("/images/bg1.jpg");
 }
 
 body {
@@ -14,7 +14,7 @@ body {
 
 .form {
   margin: 0 auto;
-  padding: 5em;
+  padding: 4em;
   border: 0.2rem solid aliceblue;
   background-color: aliceblue;
   display: flex;
