--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,7 @@ body {
 .form {
   margin: 0 auto;
   padding: 4em;
-  border: 0.2rem solid aliceblue;
-  background-color: aliceblue;
+  background-color: rgb(237, 237, 237);
   display: flex;
   flex-direction: column;
   align-items: center;
