--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,19 @@ html {
 body {
   font-family: "Libre Franklin", "Roboto", sans-serif;
   font-weight: 300;
-  font-size: 1.3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   color: aliceblue;
+}
+
+body h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+body p {
+  font-size: 1.5rem;
 }
 
 .form {
@@ -52,4 +60,15 @@ body {
   box-shadow: inset 0 0 0.2rem #8a8a8a;
   border-radius: 0.4rem;
   font-family: "Libre Franklin", "Roboto", sans-serif;
+}
+
+@media screen and (min-width: 1000px) {
+  body {
+    font-size: 1.5rem;
+  }
+
+  .form {
+    width: 50%;
+  }
+  
 }
