--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body p {
 
 .form {
   margin: 0 auto;
-  padding: 4em;
+  padding: 5em;
   background-color: rgb(237, 237, 237);
   display: flex;
   flex-direction: column;
@@ -30,6 +30,7 @@ body p {
   justify-content: center;
   border-radius: 2rem;
   color: #0b0b0b;
+  width: 50%;
 }
 
 .form label {
@@ -62,13 +63,51 @@ body p {
   font-family: "Libre Franklin", "Roboto", sans-serif;
 }
 
-@media screen and (min-width: 1000px) {
-  body {
-    font-size: 1.5rem;
+@media screen and (max-width: 1200px) {
+  body h1 {
+    transition: 0.3s;
+    font-size: 2.4rem;
   }
 
-  .form {
-    width: 50%;
+  body p {
+    display: flex;
+    align-items: center;
+    flex-direction: center;
+    justify-content: center;
+    transition: 0.3s;
+    font-size: 1.3rem;
   }
   
+}
+
+@media screen and (max-width: 870px) {
+  body h1 {
+    transition: 0.3s;
+    font-size: 2.0rem;
+  }
+
+  body p {
+    display: flex;
+    align-items: center;
+    flex-direction: center;
+    justify-content: center;
+    transition: 0.3s;
+    font-size: 1.1rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  body h1 {
+    transition: 0.3s;
+    font-size: 1.7rem;
+  }
+
+  body p {
+    display: flex;
+    align-items: center;
+    flex-direction: center;
+    justify-content: center;
+    transition: 0.3s;
+    font-size: 0.9rem;
+  }
 }
