--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,24 @@ body {
   color: aliceblue;
 }
 
+.button {
+  transition: background-color 0.5s;
+  background-color: #9b2c67;
+  color: rgb(255, 255, 255);
+  border: none;
+  margin: 20px;
+  text-align: center;
+  font-size: 1.1rem;
+  cursor: pointer;
+  border-radius: 0.4rem;
+  max-width: 30%;
+}
+
+.button:hover {
+  transition: background-color 0.5s;
+  background-color: #2e247b;
+}
+
 body h1 {
   font-size: 3rem;
   margin-bottom: 1rem;
