--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+}
+
 body {
-  background-image: url("../images/bg1.jpg");
+  background-image: linear-gradient(to bottom right, #9b2c67, #2e247b);
   font-family: "Libre Franklin", "Roboto", sans-serif;
   font-weight: 300;
   display: flex;
