--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   flex-direction: column;
   align-items: center;
   color: aliceblue;
+  padding-top: 2rem;
 }
 
 .button {
@@ -26,7 +27,7 @@ body {
   font-size: 1.1rem;
   cursor: pointer;
   border-radius: 0.4rem;
-  max-width: 30%;
+  max-width: 90%;
 }
 
 .button:hover {
@@ -35,12 +36,16 @@ body {
 }
 
 body h1 {
-  font-size: 3rem;
+  font-size: 1.6rem;
   margin-bottom: 1rem;
+  font-weight: 700;
+  padding-bottom: 5px;
 }
 
 body p {
-  font-size: 1.5rem;
+  font-size: 1rem;
+  font-weight: 300;
+  padding-bottom: 15px;
 }
 
 .form {
@@ -66,8 +71,8 @@ body p {
   margin-bottom: 1rem;
   padding: 0.5rem;
   width: 100%;
+  min-width: 100%;
   box-sizing: border-box;
-  min-width: 300px;
   border: none;
   box-shadow: inset 0 0 0.2rem #8a8a8a;
   border-radius: 0.4rem;
@@ -86,23 +91,41 @@ body p {
   font-family: "Libre Franklin", "Roboto", sans-serif;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 500px) {
   body h1 {
     transition: 0.3s;
-    font-size: 2.4rem;
+    font-size: 1.7rem;
   }
-
+  
   body p {
     display: flex;
     align-items: center;
     justify-content: center;
     transition: 0.3s;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
+  }
+  
+  .button {
+    transition: background-color 0.5s;
+    background-color: #9b2c67;
+    color: rgb(255, 255, 255);
+    border: none;
+    margin: 20px;
+    text-align: center;
+    font-size: 1.1rem;
+    cursor: pointer;
+    border-radius: 0.4rem;
+    max-width: 90%;
+  }
+  
+  .button:hover {
+    transition: background-color 0.5s;
+    background-color: #2e247b;
   }
   
 }
 
-@media screen and (max-width: 870px) {
+@media screen and (min-width: 871px) {
   body h1 {
     transition: 0.3s;
     font-size: 2.0rem;
@@ -115,12 +138,30 @@ body p {
     transition: 0.3s;
     font-size: 1.1rem;
   }
+
+  .button {
+    transition: background-color 0.5s;
+    background-color: #9b2c67;
+    color: rgb(255, 255, 255);
+    border: none;
+    margin: 20px;
+    text-align: center;
+    font-size: 1.1rem;
+    cursor: pointer;
+    border-radius: 0.4rem;
+    max-width: 90%;
+  }
+  
+  .button:hover {
+    transition: background-color 0.5s;
+    background-color: #2e247b;
+  }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (min-width: 1201px) {
   body h1 {
     transition: 0.3s;
-    font-size: 1.7rem;
+    font-size: 2.4rem;
   }
 
   body p {
@@ -128,6 +169,25 @@ body p {
     align-items: center;
     justify-content: center;
     transition: 0.3s;
-    font-size: 0.9rem;
+    font-size: 1.3rem;
+  }
+
+  .button {
+    transition: background-color 0.5s;
+    background-color: #9b2c67;
+    color: rgb(255, 255, 255);
+    border: none;
+    margin: 20px;
+    text-align: center;
+    font-size: 1.1rem;
+    cursor: pointer;
+    border-radius: 0.4rem;
+    max-width: 90%;
+  }
+  
+  .button:hover {
+    transition: background-color 0.5s;
+    background-color: #2e247b;
   }
 }
+
